Remove reply endpoint
